[gd_scene load_steps=4 format=3 uid="uid://dofakeh2ep8pb"]

[ext_resource type="Script" path="res://Scenes/Menus/main_menu.gd" id="1_qaw5q"]
[ext_resource type="Texture2D" uid="uid://crae3hxdlfp85" path="res://Menus/Virion Main Menu 3.png" id="2_1hel3"]

[sub_resource type="Theme" id="Theme_yyrgr"]
default_font_size = 36

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qaw5q")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 1.7778
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/AspectRatioContainer"]
z_index = -1
layout_mode = 2
texture = ExtResource("2_1hel3")
expand_mode = 2
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/AspectRatioContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
alignment = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = " "
fit_content = true

[node name="btn_play" type="Button" parent="CanvasLayer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Play"

[node name="btn_credits" type="Button" parent="CanvasLayer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Credits"

[node name="btn_exit" type="Button" parent="CanvasLayer/AspectRatioContainer/VBoxContainer"]
process_mode = 3
z_index = 4
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Exit"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_yyrgr")
text = " "
fit_content = true

[connection signal="pressed" from="CanvasLayer/AspectRatioContainer/VBoxContainer/btn_play" to="." method="_play_pressed"]
[connection signal="pressed" from="CanvasLayer/AspectRatioContainer/VBoxContainer/btn_credits" to="." method="_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/AspectRatioContainer/VBoxContainer/btn_exit" to="." method="_exit_pressed"]
